day 1 part 2 (in progress)