@@ -1,10 +1,11 @@
 package aoc.day01;
 
 
-import org.junit.jupiter.api.Test;
-
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -13,24 +14,25 @@ public class Day01Test {
     @Test
     public void testPart1(){
         // Given
-        List<String> input = Collections.singletonList("test");
+        List<String> input = List.of("te1s2t", "23");
 
         // When
         String result = new Day01().part1(input);
 
         // Then
-        assertEquals(input.get(0), result);
+        assertEquals("35", result);
     }
 
     @Test
     public void testPart2(){
         // Given
-        List<String> input = Collections.singletonList("test");
+        String sample = "two1nine\n" + "eightwothree\n" + "abcone2threexyz\n" + "xtwone3four\n" + "4nineeightseven2\n" + "zoneight234\n" + "7pqrstsixteen";
+        List<String> input = Arrays.stream(sample.split("\n")).collect(Collectors.toList());
 
         // When
         String result = new Day01().part2(input);
 
         // Then
-        assertEquals(input.get(0), result);
+        assertEquals("281", result);
     }
 }
